# eventsub_websocket

./: Cargo.toml  README.md
scripts/: test_server.sh
src/: error.rs  handlers.rs  lib.rs  main.rs  types.rs
src/error/: casting.rs
src/handlers/: error.rs
