[package]
name = "eventsub_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version = "0.18.0", features = ["native-tls"]}
url = "2.3.1"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
chrono = "0.4"
native-tls = "0.2.1"
